// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inline-dropdown snapshot renders correctly when in a table 1`] = `
<span
  key="0"
  style={
    Object {
      "cursor": "pointer",
      "display": "inline-flex",
      "height": "50px",
      "margin": "10px",
      "position": "relative",
      "top": "10px",
    }
  }
>
  <div
    contentEditable={false}
    onClick={[Function]}
    style={
      Object {
        "background": "#FFF",
        "border": "1px solid #C0C3CF",
        "borderRadius": "3px",
        "bottom": "10px",
        "boxSizing": "border-box",
        "display": "inline-flex",
        "height": "36px",
        "minWidth": "178px",
        "position": "relative",
      }
    }
  >
    <div
      style={
        Object {
          "background": "transparent",
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <div
      style={
        Object {
          "flex": 1,
          "overflow": "hidden",
          "padding": "8px 25px 8px 8px",
        }
      }
    >
      <Component
        node={
          Object {
            "type": "response_menu_item",
          }
        }
      />
    </div>
    <Chevron
      direction="down"
      style={
        Object {
          "position": "absolute",
          "right": "5px",
          "top": "5px",
        }
      }
    />
  </div>
  <div
    onClick={[Function]}
    style={
      Object {
        "bottom": 0,
        "cursor": "default",
        "display": "none",
        "left": 0,
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
  />
  <div
    style={
      Object {
        "background": "#fff",
        "border": "1px solid #E0E1E6",
        "borderRadius": "3px",
        "boxShadow": "0px 0px 5px rgba(126, 132, 148, 0.3)",
        "boxSizing": "border-box",
        "display": "block",
        "maxHeight": "400px",
        "minWidth": "178px",
        "overflow": "scroll",
        "position": "absolute",
        "top": "30px",
        "visibility": "hidden",
        "zIndex": -1,
      }
    }
  >
    <Component
      node={
        Object {
          "type": "menu_item",
        }
      }
    />
    <Component
      node={
        Object {
          "type": "menu_item",
        }
      }
    />
    <Component
      node={
        Object {
          "type": "menu_item",
        }
      }
    />
  </div>
</span>
`;

exports[`inline-dropdown snapshot renders correctly when opened 1`] = `
<span
  key="0"
  style={
    Object {
      "cursor": "pointer",
      "display": "inline-flex",
      "height": "50px",
      "margin": "0 10px",
      "position": "relative",
      "top": "10px",
    }
  }
>
  <div
    contentEditable={false}
    onClick={[Function]}
    style={
      Object {
        "background": "#FFF",
        "border": "1px solid #C0C3CF",
        "borderRadius": "3px",
        "bottom": "10px",
        "boxSizing": "border-box",
        "display": "inline-flex",
        "height": "36px",
        "minWidth": "178px",
        "position": "relative",
      }
    }
  >
    <div
      style={
        Object {
          "background": "transparent",
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <div
      style={
        Object {
          "flex": 1,
          "overflow": "hidden",
          "padding": "8px 25px 8px 8px",
        }
      }
    >
      <Component
        node={
          Object {
            "type": "response_menu_item",
          }
        }
      />
    </div>
    <Chevron
      direction="down"
      style={
        Object {
          "position": "absolute",
          "right": "5px",
          "top": "5px",
        }
      }
    />
  </div>
  <div
    onClick={[Function]}
    style={
      Object {
        "bottom": 0,
        "cursor": "default",
        "display": "block",
        "left": 0,
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
  />
  <div
    style={
      Object {
        "background": "#fff",
        "border": "1px solid #E0E1E6",
        "borderRadius": "3px",
        "boxShadow": "0px 0px 5px rgba(126, 132, 148, 0.3)",
        "boxSizing": "border-box",
        "display": "block",
        "maxHeight": "400px",
        "minWidth": "178px",
        "overflow": "scroll",
        "position": "absolute",
        "top": "30px",
        "visibility": "visible",
        "zIndex": 2,
      }
    }
  >
    <Component
      node={
        Object {
          "type": "menu_item",
        }
      }
    />
    <Component
      node={
        Object {
          "type": "menu_item",
        }
      }
    />
    <Component
      node={
        Object {
          "type": "menu_item",
        }
      }
    />
  </div>
</span>
`;

exports[`inline-dropdown snapshot renders correctly with a selected item 1`] = `
<span
  key="0"
  style={
    Object {
      "cursor": "pointer",
      "display": "inline-flex",
      "height": "50px",
      "margin": "0 10px",
      "position": "relative",
      "top": "10px",
    }
  }
>
  <div
    contentEditable={false}
    onClick={[Function]}
    style={
      Object {
        "background": "#FFF",
        "border": "1px solid #C0C3CF",
        "borderRadius": "3px",
        "bottom": "10px",
        "boxSizing": "border-box",
        "display": "inline-flex",
        "height": "36px",
        "minWidth": "178px",
        "position": "relative",
      }
    }
  >
    <div
      style={
        Object {
          "background": "transparent",
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <div
      style={
        Object {
          "flex": 1,
          "overflow": "hidden",
          "padding": "8px 25px 8px 8px",
        }
      }
    >
      <Component
        node={
          Object {
            "type": "response_menu_item",
          }
        }
      />
    </div>
    <Chevron
      direction="down"
      style={
        Object {
          "position": "absolute",
          "right": "5px",
          "top": "5px",
        }
      }
    />
  </div>
  <div
    onClick={[Function]}
    style={
      Object {
        "bottom": 0,
        "cursor": "default",
        "display": "none",
        "left": 0,
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
  />
  <div
    style={
      Object {
        "background": "#fff",
        "border": "1px solid #E0E1E6",
        "borderRadius": "3px",
        "boxShadow": "0px 0px 5px rgba(126, 132, 148, 0.3)",
        "boxSizing": "border-box",
        "display": "block",
        "maxHeight": "400px",
        "minWidth": "178px",
        "overflow": "scroll",
        "position": "absolute",
        "top": "30px",
        "visibility": "hidden",
        "zIndex": -1,
      }
    }
  >
    <Component
      node={
        Object {
          "type": "menu_item",
        }
      }
    />
    <Component
      node={
        Object {
          "type": "menu_item",
        }
      }
    />
    <Component
      node={
        Object {
          "type": "menu_item",
        }
      }
    />
  </div>
</span>
`;

exports[`inline-dropdown snapshot renders correctly with default props 1`] = `
<span
  key="0"
  style={
    Object {
      "cursor": "pointer",
      "display": "inline-flex",
      "height": "50px",
      "margin": "0 10px",
      "position": "relative",
      "top": "10px",
    }
  }
>
  <div
    contentEditable={false}
    onClick={[Function]}
    style={
      Object {
        "background": "#FFF",
        "border": "1px solid #C0C3CF",
        "borderRadius": "3px",
        "bottom": "10px",
        "boxSizing": "border-box",
        "display": "inline-flex",
        "height": "36px",
        "minWidth": "178px",
        "position": "relative",
      }
    }
  >
    <div
      style={
        Object {
          "background": "transparent",
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <div
      style={
        Object {
          "flex": 1,
          "overflow": "hidden",
          "padding": "8px 25px 8px 8px",
        }
      }
    >
       
    </div>
    <Chevron
      direction="down"
      style={
        Object {
          "position": "absolute",
          "right": "5px",
          "top": "5px",
        }
      }
    />
  </div>
  <div
    onClick={[Function]}
    style={
      Object {
        "bottom": 0,
        "cursor": "default",
        "display": "none",
        "left": 0,
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
  />
  <div
    style={
      Object {
        "background": "#fff",
        "border": "1px solid #E0E1E6",
        "borderRadius": "3px",
        "boxShadow": "0px 0px 5px rgba(126, 132, 148, 0.3)",
        "boxSizing": "border-box",
        "display": "block",
        "maxHeight": "400px",
        "minWidth": "178px",
        "overflow": "scroll",
        "position": "absolute",
        "top": "30px",
        "visibility": "hidden",
        "zIndex": -1,
      }
    }
  >
    <Component
      node={
        Object {
          "type": "menu_item",
        }
      }
    />
    <Component
      node={
        Object {
          "type": "menu_item",
        }
      }
    />
    <Component
      node={
        Object {
          "type": "menu_item",
        }
      }
    />
  </div>
</span>
`;
